Fix flexboxes in the random image section Needed to nest containers/boxes properly because the image placeholders were overlapping whenever the browser shrinks.

--- a/style.css
+++ b/style.css
@@ -98,65 +98,41 @@ header {
 
 /* Second Section */
 .section-two {
-    display:flex;
-    flex-wrap: wrap;
-    flex-direction: column;
     background-color: white;
     width: 100%;
-    height: 300px;
-    /* height: 500px; */
-    margin-bottom: 200px;
+    height: auto;
+    padding: 50px;
+    margin-bottom: 50px;
 }
 
 .random-info {
-    flex: 1;
     padding-top: 50px;
     padding-left: 50px;
     padding-right: 50px;
-    padding-bottom: 0;
+    padding-bottom: 30px;
     text-align: center;
     font-size: 36px;
     font-weight: 800;
     color: #1F2937;
 }
 
-.random-images-container {
-    display: flex;
-    /* justify-content: center; */
-    flex: auto;
-    gap: 5px;
-}
-
 .random-image-container {
     display: flex;
-    flex-direction: column;
-    flex: 1;
-    width: 30px;
-    height: 50px;
-    margin: 0px auto;
-    color: rgb(92, 92, 92);
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 100px;
+}
+
+.random-max-width {
+    max-width: 200px;
 }
 
 .random-image {
-    /* display: block; */
-    flex: 1;
     border: 5px solid #3882F6;
     border-radius: 10%;
-    margin: 0 auto;
-    padding: 120px;
-/*     width: 50px;
-    height: 50px; */
-    justify-content: center;
+    padding: 50px;  
 }
-
-.random-subtext {
-    /* display: block; */
-    flex: 1;
-    margin: 1px auto;
-    padding: 10px;
-    text-align: center;
-}
-
 
 
 /* Third Section with Quote */
@@ -167,7 +143,7 @@ header {
     width: 100%;
     height: auto;
     margin-bottom: 0;
-    padding: 50px;
+    padding: 80px;
     font-size: 36px;
     font-weight: light;
     font-style: italic;
@@ -189,12 +165,11 @@ header {
 
 
 footer {
-    display:flex;
+    text-align: center;
     background-color: #1F2937;
     width: 100%;
     height: 100px;
     margin: 0;
-    padding: 50px;
+    padding: 10px;
     color: white;
-    
 }
